design: html layout 구현

--- a/src/main/resources/templates/usr/question/testPage.html
+++ b/src/main/resources/templates/usr/question/testPage.html
@@ -4,7 +4,8 @@
 
 <div layout:fragment="content" class="min-h-screen flex flex-col gap-12">
 
-    <div>test
+    <div>
+        test
         <button class="btn w-fit">Button</button>
 
     </div>
