--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -1,12 +1,19 @@
-<div th:fragment="navbarFragment" class="navbar bg-gray-600">
-  <div class="flex-1">
-    <a href="/"
-       class="btn btn-ghost normal-case text-xl">In hub</a>
-  </div>
+<div th:fragment="navbarFragment"
+     class="btm-nav bg-base-100">
+    <a>
+        <i class="fa-solid fa-house"></i>
+    </a>
+    <a>
+        <i class="fa-regular fa-comments"></i>
+    </a>
+    <a class="active">
+        <i class="fa-regular fa-circle-play"></i>
+    </a>
+    <a>
+        <i class="fa-solid fa-list-ul"></i>
+    </a>
+    <a>
+        <i class="fa-regular fa-user"></i>
+    </a>
 
-  <div class="flex-none gap-2">
-
-    네비바 매뉴
-
-  </div>
 </div>
