design: 메인 타이틀 수정

--- a/src/main/resources/templates/usr/index.html
+++ b/src/main/resources/templates/usr/index.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/index}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title></title></head>
+<head><title>메인</title></head>
 
 <div layout:fragment="main" class="min-h-screen flex flex-col items-center gap-12">
 
