feat: question service 생성 로직 구현, 테스트 완료

--- a/src/main/resources/templates/layout/category.html
+++ b/src/main/resources/templates/layout/category.html
@@ -3,7 +3,7 @@
 
     <div class="navbar bg-base-100">
         <div class="flex-1">
-            <a class="btn btn-ghost normal-case text-xl">카테고리</a>
+            <a class="btn btn-ghost normal-case text-xl">마이페이지</a>
         </div>
         <div class="flex-none">
             <div class="dropdown dropdown-end">
@@ -14,7 +14,6 @@
 
                 <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
                     <li><a>Settings</a></li>
-                    <li><a>Logout</a></li>
                 </ul>
 
             </div>
