feat: 밑줄 친 문제 목록 보기 기능 추가 (#23)
* feat: Member Entity 필드 추가

* feat: Member Entity 필드 추가

* fix: QMember 수정

* feat: MemberService.create() 일반 회원가입 구현 및 테스트

* refactor: Member 필드 1대N 관계 추가

* feat: Member.updateRole() 및 AppConfig 추가

* feat: 소셜 로그인 구현 준비

* feat: 소셜로그인 구현을 위한 yml 작업

* feat: 로그인 기능 추가

* design: 로그인 페이지 디자인

* feat: 메인 페이지 추가

* design: 메인 타이틀 수정

* feat: 밑줄 친 문제 목록 보기 기능 추가

* refactor: 밑줄 친 문제 목록 로직 수정

--- a/src/main/resources/templates/usr/member/underline.html
+++ b/src/main/resources/templates/usr/member/underline.html
@@ -1,10 +1,14 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>메인</title></head>
+<head><title>밑줄 친 문제 목록 보기</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
+    <div th:each="underline : ${underlines}">
+        <span th:text="${underline.id}"></span>
+        <span th:text="${underline.question}"></span>
+    </div>
 
 </div>
 </html>
