--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -6,10 +6,10 @@
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <div class="flex flex-col">
-        <a href="/member/underline/question">밑줄 친 문제 목록</a>
+        <a href="/member/underlinedQuestionList">밑줄 친 문제 목록</a>
         <a href="#">답을 업로드한 문제 목록</a>
         <a href="#">답글에 밑줄 친 문제 목록</a>
-        <a href="#">내가 만든 문제 목록</a>
+        <a href="/member/myQuestionList">내가 만든 문제 목록</a>
         <a href="#">밑줄 친 문제만 랜덤으로 풀기</a>
         <a href="#">오답노트 확인</a>
         <a href="#">통계</a>
