design: 카테고리 리스트 어드민 에게만 카테고리 생성 버튼 활성화

--- a/src/main/resources/templates/usr/category/top/list.html
+++ b/src/main/resources/templates/usr/category/top/list.html
@@ -6,5 +6,11 @@
 
     <form th:replace="~{usr/category/fragment/list/table :: table(${categories})}"></form>
 
+    <div th:if="${@rq.login}"
+         class="flex justify-end">
+        <a th:if="${@rq.member.role eq T(com.twenty.inhub.boundedContext.member.entity.MemberRole).ADMIN}"
+           th:href="@{/category/create}" class="btn">카테고리 만들기</a>
+    </div>
+
 </div>
 </html>
