feat: 카테고리별 문제 목록 구현 완료

--- a/src/main/resources/templates/usr/category/fragment/list/table.html
+++ b/src/main/resources/templates/usr/category/fragment/list/table.html
@@ -11,16 +11,16 @@
 
         <td class="w-24">
             <a th:text="*{name}"
-               th:href="@{/question/list}"></a>
+               th:href="@{/question/list/{id}(id=*{id})}"></a>
         </td>
 
         <td class="grow">
             <a th:text="*{about}"
-               th:href="@{/question/list}"></a>
+               th:href="@{/question/list/{id}(id=*{id})}"></a>
         </td>
         <td>
             <a th:text="|*{questions.size} 문제|"
-               th:href="@{/question/list}"></a>
+               th:href="@{/question/list/{id}(id=*{id})}"></a>
         </td>
     </tr>
     </tbody>
