--- a/src/main/resources/templates/usr/question/top/create.html
+++ b/src/main/resources/templates/usr/question/top/create.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>마이페이지</title></head>
+<head><title>카드 문제 만들기</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12 bg-base-200">
 
