--- a/src/main/resources/templates/usr/category/top/list.html
+++ b/src/main/resources/templates/usr/category/top/list.html
@@ -9,7 +9,7 @@
     <div th:if="${@rq.login}"
          class="flex justify-end">
         <a th:if="${@rq.member.role eq T(com.twenty.inhub.boundedContext.member.entity.MemberRole).ADMIN}"
-           th:href="@{/category/create}" class="btn">카테고리 만들기</a>
+           th:href="@{/category/create}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
 
 </div>
