--- a/src/main/resources/templates/usr/question/fragment/detail/content.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/content.html
@@ -1,12 +1,18 @@
 <div th:fragment="content(question)"
-      class="card w-96 bg-base-100 shadow-xl">
+     class="card w-80 bg-base-100 shadow-xl mt-5">
 
 
     <div class="card-body">
-        <h2 class="card-title" th:text="${question.name}"></h2>
+        <div class="flex justify-between">
+            <h2 class="card-title" th:text="${question.name}"></h2>
+            <span th:text="${question.type}"></span>
+        </div>
+
+        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question})}"></div>
+
         <p th:text="${question.content}"></p>
     </div>
-    <div>
+    <div class="flex flex-col">
 
     </div>
 
