design: 난이도 ui 업데이트

--- a/src/main/resources/templates/usr/question/fragment/detail/content.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/content.html
@@ -8,7 +8,7 @@
             <span th:text="${question.type}"></span>
         </div>
 
-        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question})}"></div>
+        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question.difficulty})}"></div>
 
         <p th:text="${question.content}"></p>
     </div>
