--- a/src/main/resources/templates/usr/question/fragment/detail/difficulty.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/difficulty.html
@@ -1,19 +1,19 @@
-<div th:fragment="difficulty(question) " class="rating rating-xs">
+<div th:fragment="difficulty(difficulty) " class="rating rating-xs">
 
 
     <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" disabled
-           th:checked="${question.difficulty eq 0}"/>
+           th:checked="${difficulty eq 0}"/>
 
     <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" disabled
-           th:checked="${question.difficulty eq 1}"/>
+           th:checked="${difficulty eq 1}"/>
 
     <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" disabled
-           th:checked="${question.difficulty eq 2}"/>
+           th:checked="${difficulty eq 2}"/>
 
     <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" disabled
-           th:checked="${question.difficulty eq 3}"/>
+           th:checked="${difficulty eq 3}"/>
 
     <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" disabled
-           th:checked="${question.difficulty eq 4}"/>
+           th:checked="${difficulty eq 4}"/>
 
 </div>
