fix: 난이도 제대로 안나오는 문제 해결

--- a/src/main/resources/templates/usr/question/fragment/list/table.html
+++ b/src/main/resources/templates/usr/question/fragment/list/table.html
@@ -21,7 +21,7 @@
 
     <td class="grow">
       <a th:href="@{/question/detail/{id}(id=*{id})}">
-        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(*{difficulty})}"></div>
+        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question})}"></div>
       </a>
     </td>
     <td>
