--- a/src/main/resources/templates/usr/question/fragment/detail/content.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/content.html
@@ -1,20 +1,8 @@
 <div th:fragment="content(question)"
-     class="card w-80 bg-base-100 shadow-xl mt-5">
-
+     class="card w-80 bg-base-100 shadow-xl">
 
     <div class="card-body">
-        <div class="flex justify-between">
-            <h2 class="card-title" th:text="${question.name}"></h2>
-            <span th:text="${question.type}"></span>
-        </div>
-
-        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question.difficulty})}"></div>
-
-        <p th:text="${question.content}"></p>
-    </div>
-    <div class="flex flex-col">
 
     </div>
-
 
 </div>
