--- a/src/main/resources/templates/usr/question/top/detail.html
+++ b/src/main/resources/templates/usr/question/top/detail.html
@@ -2,8 +2,9 @@
 
 <head><title>카드 문제</title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12 bg-base-200">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-5 bg-base-200">
 
+    <div th:replace="~{usr/question/fragment/detail/title :: title(${question})}"></div>
     <div th:replace="~{usr/question/fragment/detail/content :: content(${question})}"></div>
 
 </div>
