--- a/src/main/resources/templates/usr/question/fragment/detail/content.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/content.html
@@ -1,8 +1,16 @@
 <div th:fragment="content(question)"
-     class="card w-80 bg-base-100 shadow-xl">
+     class="card w-80 bg-base-100 shadow-xl mb-12">
 
     <div class="card-body">
+        <p class="py-6" th:text="${question.content}"></p>
 
+        <div th:each="choice, roop : ${question.choiceList}"
+             class="form-control">
+            <label class="label cursor-pointer">
+                <span class="label-text" th:text="|${roop.count}.  ${choice.choice}|"></span>
+                <input type="radio" name="radio-10" class="radio checked:bg-red-500" checked disabled/>
+            </label>
+        </div>
     </div>
 
 </div>
