--- a/src/main/resources/templates/usr/question/fragment/detail/title.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/title.html
@@ -7,7 +7,7 @@
             <h2 class="card-title" th:text="${question.name}"></h2>
             <span th:text="${question.type}"></span>
         </div>
-
+        <div th:text="${question.category.name}"></div>
         <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question})}"></div>
     </div>
 
