--- a/src/main/resources/templates/usr/question/fragment/detail/content.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/content.html
@@ -1,5 +1,5 @@
 <div th:fragment="content(question)"
-     class="card w-80 bg-base-100 shadow-xl mb-12">
+     class="card w-80 bg-base-100 shadow-xl">
 
     <div class="card-body">
         <p class="py-6" th:text="${question.content}"></p>
