--- a/src/main/resources/templates/usr/question/top/detail.html
+++ b/src/main/resources/templates/usr/question/top/detail.html
@@ -7,5 +7,10 @@
     <div th:replace="~{usr/question/fragment/detail/title :: title(${question})}"></div>
     <div th:replace="~{usr/question/fragment/detail/content :: content(${question})}"></div>
 
+    <div class="mb-12 flex gap-3">
+        <span><i class="fa-regular fa-comment"></i></span>
+        <span><i class="fa-solid fa-highlighter"></i></span>
+    </div>
+
 </div>
 </html>
