--- a/src/main/resources/templates/usr/question/top/detail.html
+++ b/src/main/resources/templates/usr/question/top/detail.html
@@ -5,11 +5,14 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-5 bg-base-200 mb-12">
 
     <div th:replace="~{usr/question/fragment/detail/title :: title(${question})}"></div>
-    <div th:replace="~{usr/question/fragment/detail/content :: content(${question})}"></div>
+    <div th:replace="~{usr/question/fragment/detail/content :: content(${question}, ${mcq})}"></div>
+
 
     <div class="mb-12 flex gap-3">
-        <span><i class="fa-regular fa-comment"></i></span>
+        <a th:href="@{/question/list/{id}(id=${question.category.id})}">
+            <i class="fa-solid fa-chevron-left"></i></a>
         <span><i class="fa-solid fa-highlighter"></i></span>
+        <span><i class="fa-regular fa-comment"></i></span>
     </div>
 
 </div>
