--- a/src/main/resources/templates/usr/question/top/detail.html
+++ b/src/main/resources/templates/usr/question/top/detail.html
@@ -6,14 +6,10 @@
 
     <div th:replace="~{usr/question/fragment/detail/title :: title(${question})}"></div>
     <div th:replace="~{usr/question/fragment/detail/content :: content(${question}, ${mcq})}"></div>
+    <div th:replace="~{usr/question/fragment/detail/nav :: nav(${question.tags})}"></div>
 
 
-    <div class="mb-12 flex gap-3">
-        <a th:href="@{/question/list/{id}(id=${question.category.id})}">
-            <i class="fa-solid fa-chevron-left"></i></a>
-        <span><i class="fa-solid fa-highlighter"></i></span>
-        <span><i class="fa-regular fa-comment"></i></span>
-    </div>
+
 
 </div>
 </html>
