feat: 문제 상세페이지 기능 구현 (#29)
* fix: member import 삭제

* feat: Question query dsl 적용

* question, category 객체 생성 service 구현

* test: category 생성 로직 검증 완료

* test: 주관식 문제 생성 검증완료

* teat: question 객관식 문제 생성 검증 완료

* rebase 완료

* design: html layout 구현

* feat: category 생성 완료 / HTML 까지 완료

* feat: category list 페이지 구현 완료

* design: 네비바 레이아웃 변경

* design: 네비바 레이아웃 변경 완료

* feat: BaseEntity 생성

* feat: category, question, tag, choice, underline 에 BaseEntity 상속

* remove: 태그, 선택지 관련 코드 삭제 / 연관관계 매핑 형식으로 변경할 예정

* feat: choice, tag 생성, 수정 entity 완료

* feat: question service 생성 로직 구현, 테스트 완료

* feat: question 생성 구현 / 문제 타입 아직 반영 안됬음

* feat: category init data 추가

* design: 카테고리 리스트 어드민 에게만 카테고리 생성 버튼 활성화

* feat: 카테고리별 문제 목록 구현 완료

* feat: 카테고리별 문제 목록 구현 완료

* feat: 객관식 주관식 타입적용 완료 / init data 추가

* feat: 문제 상세페이지 생성

* fix: member 이넘타입 검증 안되는 문제 해결

* design: 난이도 ui 업데이트

* fix: 난이도 제대로 안나오는 문제 해결

* feat: 문제 상세페이지 생성

* design: 문제 상세페이지에 댓글, 밑줄긋기 버튼 추가

* design: 문제 상페 뒤로가기 ui 업데이트

* design: 문제 상세페이지 생성

* chore: 오타수정

--- a/src/main/resources/templates/usr/category/top/list.html
+++ b/src/main/resources/templates/usr/category/top/list.html
@@ -8,8 +8,8 @@
 
     <div th:if="${@rq.login}"
          class="flex justify-end">
-        <a th:if="${@rq.member.role eq T(com.twenty.inhub.boundedContext.member.entity.MemberRole).ADMIN}"
-           th:href="@{/category/create}" class="btn">카테고리 만들기</a>
+        <a th:if="${@rq.member.role eq role}"
+           th:href="@{/category/create}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
 
 </div>
