--- a/src/main/resources/templates/usr/question/fragment/function/form.html
+++ b/src/main/resources/templates/usr/question/fragment/function/form.html
@@ -1,27 +1,36 @@
 <form th:fragment="form(createFunctionForm, categories, types)"
-      th:action method="post"
+      action="/question/play" method="get"
       th:object="${createFunctionForm}"
       class="flex flex-col justify-start gap-4 mt-5 mb-12"
       onsubmit="JoinForm__submit(this); return false;">
 
 
-  <div>
-    <div>카테고리 선택</div>
+    <label for="my-modal-3" class="link">카테고리 선택</label>
 
-    <div class="form-control"
-         th:each="category : ${categories}"
-         th:object="${category}">
+    <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+    <div class="modal">
+      <div class="modal-box relative">
+        <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+        <h3 class="text-lg font-bold">카테고리를 선택해 주세요.</h3>
 
-      <label class="label cursor-pointer">
-        <span class="label-text" th:text="*{name}"></span>
-        <input type="checkbox" checked="checked" class="checkbox"
-               th:field="${createFunctionForm.categories}"
-               th:value="*{id}"/>
-      </label>
+        <div class="form-control"
+             th:each="category : ${categories}"
+             th:object="${category}">
+
+          <label class="label cursor-pointer">
+            <span class="label-text" th:text="*{name}"></span>
+            <input type="checkbox" checked="checked" class="checkbox"
+                   th:field="${createFunctionForm.categories}"
+                   th:value="*{id}"/>
+          </label>
+        </div>
+
+      </div>
     </div>
 
-  </div>
 
 
-    <button class="btn btn-primary mb-12">만들기</button>
+
+
+    <button class="btn btn-primary mb-12">문제풀기 시작</button>
 </form>
